@@ -1,4 +1,9 @@
 2011-08-04 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-66
+	* Change About Dialog. Update message and contact person.
+	* Add Alert dialog using Diff for "Deep Import" feature. 
+
+2011-08-04 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-65
 	* Change "Clone" option name to "Deep Clone".
 	* Change "Copy" option name to "Clone".
